# rest_project

./: .env  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.web  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  docker-compose.yml  docs.py  nginx.conf  pyproject.toml
.github/workflows/: main.yml
config/: settings.py  urls.py
html/: index.html
materials/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_price.py  0004_course_stripe_course_id.py  0005_alter_course_stripe_course_id.py
users/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: add_payments.py  add_permissions.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_payments_owner.py  0004_subscription.py  0005_payments_link_to_the_payment.py  0006_payments_stripe_session_id.py  0007_payments_is_paid.py  0008_alter_payments_lesson_payment.py
