[tool.poetry]
name = "rest-project"
version = "0.1.0"
description = ""
authors = ["Konstantin Korovin <ryan337@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
django = "^5.2.6"
pillow = "^11.3.0"
djangorestframework = "^3.16.1"
python-dotenv = "^1.1.1"
django-filter = "^25.1"
shell = "^1.0.1"
djangorestframework-simplejwt = "^5.5.1"
pandas = "^2.3.3"
coverage = "^7.10.7"
drf-yasg = "^1.21.11"
requests = "^2.32.5"
celery = "^5.5.3"
django-celery-beat = "^2.8.1"
django-redis = "^6.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'